progs/tests/blob/non_null_fields_faulty.sy
A :: blob {
    a: int
}

start :: fn {
    a := A!
    print a.a
}

// error: #FieldTypeMismatch(_, _, _, _)
// error: #TypeError(_, _)
